--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
          <li> Docker </li>
          <li> Ansible </li>
          <li> Integración contínua </li>
-     
+         <li> Integración social </li>
      </ul>
 </body>
 </html>
